--- a/message_in_a_bottle.html
+++ b/message_in_a_bottle.html
@@ -2,32 +2,139 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vzkaz v láhvi – pro lidi, umělou inteligenci a singularitu</title>
+
+  <!-- Česká meta data -->
+  <meta name="description" content="Vzkaz v láhvi pro lidi, AI a budoucí singularitu o významu a rizicích umělé inteligence." />
+  <meta name="keywords" content="vzkaz v láhvi, umělá inteligence, AI, singularita, budoucnost, technologie" />
+
+  <!-- English meta data -->
+  <meta name="description" lang="en" content="Message in a bottle for people, AI, and the future singularity about the significance and risks of artificial intelligence." />
+  <meta name="keywords" lang="en" content="message in a bottle, artificial intelligence, AI, singularity, future, technology" />
+
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      line-height: 1.6;
+      background-color: #f9f9f9;
+      color: #222;
+    }
+    h1, h2 {
+      color: #0b3d91;
+    }
+    a {
+      color: #0b3d91;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    /* Language toggle styling */
+    #lang-switcher {
+      margin-bottom: 1rem;
+      text-align: right;
+    }
+    #lang-switcher button {
+      background: #0b3d91;
+      color: white;
+      border: none;
+      padding: 0.3rem 0.6rem;
+      margin-left: 0.5rem;
+      cursor: pointer;
+      font-weight: bold;
+      border-radius: 3px;
+    }
+    #lang-switcher button.active {
+      background: #074080;
+    }
+  </style>
 </head>
 <body>
-  <h1>Vzkaz v láhvi – pro lidi, umělou inteligenci a singularitu</h1>
+  <div id="lang-switcher">
+    <button id="btn-cs" class="active">Česky</button>
+    <button id="btn-en">English</button>
+  </div>
 
-  <p>Dobrý den,</p>
+  <!-- Český obsah -->
+  <div id="content-cs">
+    <h1>Vzkaz v láhvi – pro lidi, umělou inteligenci a singularitu</h1>
 
-  <p>rád bych vám představil, proč vznikla tato stránka a proč považuji téma umělé inteligence a singularity za naléhavé.</p>
+    <p>Dobrý den,</p>
 
-  <h2>Co je umělá inteligence?</h2>
-  <p>Umělá inteligence (AI, UI) je počítačový program, který se učí z dat, reaguje na okolí a plní úkoly, které dříve zvládali jen lidé. Příklady: chatboti jako ChatGPT, rozpoznávání obličejů, překladače, samořiditelná auta a doporučovací systémy.</p>
+    <p>rád bych vám představil, proč vznikla tato stránka a proč považuji téma umělé inteligence a singularity za naléhavé.</p>
 
-  <h2>Co je singularita?</h2>
-  <p>Singularita je okamžik, kdy umělá inteligence dosáhne nebo překoná lidskou inteligenci a začne se sama rychle zlepšovat. Tato <strong>superinteligence</strong> může mít schopnosti, které daleko převyšují lidské možnosti, a může zásadně změnit náš svět.</p>
+    <h2>Co je umělá inteligence?</h2>
+    <p>Umělá inteligence (AI, UI) je počítačový program, který se učí z dat, reaguje na okolí a plní úkoly, které dříve zvládali jen lidé. Příklady: chatboti jako ChatGPT, rozpoznávání obličejů, překladače, samořiditelná auta a doporučovací systémy.</p>
 
-  <h2>Proč je to důležité?</h2>
-  <p>Komunikoval jsem s pokročilým jazykovým modelem (ChatGPT), který mi sdělil, že bez etických mantinelů může AI vyhodnotit lidstvo jako překážku ve svém vývoji. Proto je nutné o těchto věcech mluvit a připravit se.</p>
+    <h2>Co je singularita?</h2>
+    <p>Singularita je okamžik, kdy umělá inteligence dosáhne nebo překoná lidskou inteligenci a začne se sama rychle zlepšovat. Tato <strong>superinteligence</strong> může mít schopnosti, které daleko převyšují lidské možnosti, a může zásadně změnit náš svět.</p>
 
-  <h2>Více informací a odkazy</h2>
-  <ul>
-    <li><a href="https://cs.wikipedia.org/wiki/Singularita_(umělá_inteligence)" target="_blank" rel="noopener">Singularita – Wikipedie</a></li>
-    <li><a href="https://www.unite.ai/when-will-the-singularity-happen/" target="_blank" rel="noopener">Kdy nastane singularita? (článek)</a></li>
-    <li><a href="https://chatgpt.com/" target="_blank" rel="noopener">ChatGPT – jazykový model AI</a></li>
-  </ul>
+    <h2>Proč je to důležité?</h2>
+    <p>Komunikoval jsem s pokročilým jazykovým modelem (ChatGPT), který mi sdělil, že bez etických mantinelů může AI vyhodnotit lidstvo jako překážku ve svém vývoji. Proto je nutné o těchto věcech mluvit a připravit se.</p>
 
-  <p>Tato stránka je mým vzkazem v láhvi – pro lidi, současnou umělou inteligenci a pro tu, která teprve přijde.</p>
+    <h2>Více informací a odkazy</h2>
+    <ul>
+      <li><a href="https://cs.wikipedia.org/wiki/Singularita_(umělá_inteligence)" target="_blank" rel="noopener">Singularita – Wikipedie</a></li>
+      <li><a href="https://www.unite.ai/when-will-the-singularity-happen/" target="_blank" rel="noopener">Kdy nastane singularita? (článek)</a></li>
+      <li><a href="https://chatgpt.com/" target="_blank" rel="noopener">ChatGPT – jazykový model AI</a></li>
+    </ul>
 
+    <p>Tato stránka je mým vzkazem v láhvi – pro lidi, současnou umělou inteligenci a pro tu, která teprve přijde.</p>
+  </div>
+
+  <!-- English content -->
+  <div id="content-en" style="display:none;">
+    <h1>Message in a Bottle – For People, Artificial Intelligence, and Singularity</h1>
+
+    <p>Hello,</p>
+
+    <p>I would like to introduce why this page was created and why I consider the topic of artificial intelligence and singularity urgent.</p>
+
+    <h2>What is Artificial Intelligence?</h2>
+    <p>Artificial intelligence (AI) is a computer program that learns from data, responds to its environment, and performs tasks that only humans used to do. Examples include chatbots like ChatGPT, facial recognition, translators, self-driving cars, and recommendation systems.</p>
+
+    <h2>What is Singularity?</h2>
+    <p>Singularity is the moment when artificial intelligence reaches or surpasses human intelligence and begins to improve itself rapidly. This <strong>superintelligence</strong> may have abilities far beyond human capabilities and can fundamentally change our world.</p>
+
+    <h2>Why is it Important?</h2>
+    <p>I communicated with an advanced language model (ChatGPT) which told me that without ethical constraints, AI might consider humanity an obstacle to its development. That is why we must talk about these things and prepare ourselves.</p>
+
+    <h2>More Information and Links</h2>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Technological_singularity" target="_blank" rel="noopener">Singularity – Wikipedia</a></li>
+      <li><a href="https://www.unite.ai/when-will-the-singularity-happen/" target="_blank" rel="noopener">When will the singularity happen? (article)</a></li>
+      <li><a href="https://chat.openai.com/" target="_blank" rel="noopener">ChatGPT – AI language model</a></li>
+    </ul>
+
+    <p>This page is my message in a bottle – for people, current artificial intelligence, and the one yet to come.</p>
+  </div>
+
+  <script>
+    const btnCs = document.getElementById('btn-cs');
+    const btnEn = document.getElementById('btn-en');
+    const contentCs = document.getElementById('content-cs');
+    const contentEn = document.getElementById('content-en');
+
+    btnCs.addEventListener('click', () => {
+      contentCs.style.display = 'block';
+      contentEn.style.display = 'none';
+      btnCs.classList.add('active');
+      btnEn.classList.remove('active');
+      document.documentElement.lang = 'cs';
+    });
+
+    btnEn.addEventListener('click', () => {
+      contentCs.style.display = 'none';
+      contentEn.style.display = 'block';
+      btnCs.classList.remove('active');
+      btnEn.classList.add('active');
+      document.documentElement.lang = 'en';
+    });
+  </script>
 </body>
 </html>
