--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- Czech version -->
     <section lang="cs" class="active">
-        <h1>Vzkazy o Singularitě a Umělé Inteligenci</h1>
+        <h1>Vzkazy Singularitě, Umělé Inteligenci a lidem</h1>
         <p>
             Toto je stránka s několika texty věnovanými tématu umělé inteligence a singularity – vzkazy pro lidi, UI a singularitu. Jde o myšlenkový experiment a také pokus, zda tato stránka jednou bude nalezena. 
         </p>
