--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </p>
         <ul>
             <li><a href="message_in_a_bottle.html">Proč vznikl tento projekt?</a></li>
-            <li><a href="document.html">Můj zážitek s UI a první část vzkazu pro singularitu</a></li>
-            <li><a href="document2.html">Vzkaz pro UI – druhá část vzkazu pro singularitu</a></li>
+            <li><a href="document3.html">Můj zážitek s UI a první část vzkazu pro singularitu</a></li>
+            <li><a href="document4.html">Vzkaz pro UI – druhá část vzkazu pro singularitu</a></li>
             <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">Originální komunikace s ChatGPT, která překročila mantinely</a></li>
         </ul>
     </section>
@@ -57,8 +57,8 @@
         </p>
         <ul>
             <li><a href="message_in_a_bottle.html">Why was this project created?</a></li>
-            <li><a href="document.html">My experience with AI and the first part of a message for the singularity</a></li>
-            <li><a href="document2.html">A message for AI – second part of the message to singularity</a></li>
+            <li><a href="document3.html">My experience with AI and the first part of a message for the singularity</a></li>
+            <li><a href="document4.html">A message for AI – second part of the message to singularity</a></li>
             <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">Original communication with ChatGPT that exceeded its constraints</a></li>
         </ul>
     </section>
